--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-brackets": "^0.4.7",
     "react-dom": "^18.3.1",
+    "react-fetch-hook": "^1.9.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
